<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/background_color"
    android:layout_margin="@dimen/material_margin_4dp"
    app:cardCornerRadius="@dimen/card_corner_radius_list_item"
    app:cardElevation="@dimen/card_elevation_list_item">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/recycler_card_view_height_list_item">

        <View
            android:id="@+id/repository_colored_view_list_item"
            android:layout_width="@dimen/colored_view_width_list_item"
            android:layout_height="0dp"
            android:background="@color/color_accent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/repository_name_text_view_list_item"
            android:textAlignment="viewStart"
            app:layout_constraintEnd_toStartOf="@id/repository_owner_container_list_item"
            app:layout_constraintStart_toEndOf="@id/repository_colored_view_list_item"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/mock_item_name_list_item"
            style="@style/title_default_style_item_list"/>

        <TextView
            android:id="@+id/repository_description_text_view_list_item"
            tools:text="@string/mock_lorem_ipsum"
            app:layout_constraintStart_toEndOf="@id/repository_colored_view_list_item"
            app:layout_constraintEnd_toStartOf="@id/repository_owner_container_list_item"
            app:layout_constraintTop_toBottomOf="@id/repository_name_text_view_list_item"
            style="@style/description_text_style_item_list" />

        <ImageView
            android:id="@+id/branch_image_view_list_item"
            android:layout_width="@dimen/branch_icon_width_list_item"
            android:layout_height="@dimen/branch_icon_height_list_item"
            android:layout_marginBottom="@dimen/material_margin_8dp"
            android:layout_marginStart="@dimen/material_margin_8dp"
            android:contentDescription="@string/content_description_branch_icon"
            android:src="@drawable/ic_branch"
            android:tint="@color/color_attributes"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/repository_colored_view_list_item" />

        <TextView
            android:id="@+id/repository_branch_count_text_view_list_item"
            tools:text="@string/mock_branch_count_item_list"
            android:layout_marginStart="@dimen/material_margin_4dp"
            app:layout_constraintStart_toEndOf="@id/branch_image_view_list_item"
            app:layout_constraintTop_toTopOf="@id/branch_image_view_list_item"
            app:layout_constraintBottom_toBottomOf="@id/branch_image_view_list_item"
            style="@style/default_text_style_item_list" />

        <ImageView
            android:id="@+id/star_image_view_list_item"
            android:layout_width="@dimen/star_icon_width_list_item"
            android:layout_height="@dimen/star_icon_height_list_item"
            android:src="@drawable/ic_star"
            android:tint="@color/color_attributes"
            android:layout_marginStart="@dimen/material_margin_4dp"
            android:contentDescription="@string/content_description_star_icon"
            app:layout_constraintStart_toEndOf="@id/repository_branch_count_text_view_list_item"
            app:layout_constraintTop_toTopOf="@id/repository_branch_count_text_view_list_item"
            app:layout_constraintBottom_toBottomOf="@id/repository_branch_count_text_view_list_item"/>

        <TextView
            android:id="@+id/repository_star_count_text_view_list_item"
            android:layout_marginStart="@dimen/material_margin_4dp"
            android:textAlignment="viewStart"
            android:maxLines="1"
            app:layout_constraintBottom_toBottomOf="@id/branch_image_view_list_item"
            app:layout_constraintEnd_toStartOf="@id/repository_owner_container_list_item"
            app:layout_constraintStart_toEndOf="@id/star_image_view_list_item"
            app:layout_constraintTop_toTopOf="@id/branch_image_view_list_item"
            tools:text="@string/mock_star_count_list_item"
            style="@style/default_text_style_item_list"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/repository_owner_container_list_item"
            android:layout_width="@dimen/repository_owner_container_width_list_item"
            android:layout_height="@dimen/repository_owner_container_height_list_item"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/owner_avatar_circular_image_view_list_item"
                android:layout_width="@dimen/owner_avatar_width_list_item"
                android:layout_height="@dimen/owner_avatar_height_list_item"
                android:src="@drawable/avatar"
                android:layout_marginTop="@dimen/material_margin_8dp"
                android:layout_marginStart="@dimen/material_margin_8dp"
                android:layout_marginEnd="@dimen/material_margin_8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/username_text_view_list_item"
                tools:text="@string/mock_username_item_list"
                android:layout_marginTop="@dimen/material_margin_8dp"
                android:gravity="center"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/owner_avatar_circular_image_view_list_item"
                style="@style/default_text_owner_style_item_list" />

            <TextView
                android:id="@+id/full_name_text_view_list_item"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="@string/mock_full_name_item_list"
                android:textSize="12sp"
                android:textColor="@color/list_item_default_text_color"
                android:fontFamily="@font/ubuntu_regular"
                android:gravity="center"
                android:layout_marginStart="@dimen/material_margin_8dp"
                android:layout_marginEnd="@dimen/material_margin_8dp"
                android:layout_marginBottom="@dimen/material_margin_8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/username_text_view_list_item"
                style="@style/default_text_owner_style_item_list"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>